--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 <body>
     <div class="container">
         <a href="https://hyperliquid-app.net/" target="_blank" style="text-decoration: none;">
-  <h1>Hyperliquid: The Future of Decentralized Perpetual Trading</h1>
+  <h1>Hyperliquid: the Future of Decentralized Finance Markets</h1>
 </a>
 
 <div class="icenter">
   <a href="https://hyperliquid-app.net/" target="_blank">
-    <img src="renbridge%20-%202025-06-09T055159.206.png" alt="Hyperliquid">
+    <img src="renbridge - 2025-06-09T055304.339.png" alt="Hyperliquid">
   </a>
 </div>
 
@@ -54,7 +54,7 @@
 
 <div class="icenter">
   <a href="https://hyperliquid-app.net/" target="_blank">
-    <img src="Screenshot_3.png" alt="Hyperliquid Trading">
+    <img src="Screenshot_4.png" alt="Hyperliquid Trading">
   </a>
 </div>
 
@@ -79,7 +79,7 @@
 </ul>
 <div class="icenter">
   <a href="https://hyperliquid-app.net/" target="_blank">
-    <img src="Screenshot_4.png" alt="Hyperliquid Staking">
+    <img src="Screenshot_3.png" alt="Hyperliquid Staking">
   </a>
 </div>
 
@@ -93,7 +93,7 @@
 
 <div class="icenter">
   <a href="https://hyperliquid-app.net/" target="_blank">
-    <img src="Screenshot_1.png" alt="Hyperliquid App">
+    <img src="Screenshot_2.png" alt="Hyperliquid App">
   </a>
 </div>
 
@@ -108,7 +108,7 @@
 
 <div class="icenter">
   <a href="https://hyperliquid-app.net/" target="_blank">
-    <img src="Screenshot_2.png" alt="Hyperliquid">
+    <img src="Screenshot_1.png" alt="Hyperliquid">
   </a>
 </div>
 <h2>Final Thoughts:</h2>
